maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:12: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var murDroite : Boolean
      ^Escaper:12: error: local variables must be initialized
  var murDroite : Boolean
      ^